Expand the classpath through the virtual filesystem
Classpath expansion -- following a manifest's Class-Path and
Bundle-ClassPath attributes, and adding the jarfiles a container keeps in
a lib dir -- only worked for a jarfile, because it read the zipfile's
entry list and its manifest bytes directly. A directory was expanded not
at all, and a jarfile living in a non-default filesystem was expanded by
re-opening its child by location string, which resolved the child in the
default filesystem instead of beside its parent.

Expansion now runs over a VfsRoot, so it works the same way for a
jarfile, for a directory, and for a jarfile nested inside another
jarfile, however deeply. A child element is resolved against the root
that declared it: a relative Class-Path entry of a jarfile in a Jimfs
filesystem now names a sibling in that same filesystem, and an exploded
jarfile's manifest is honoured just as the jarfile's was. A ChildEntry
carries the Path it resolved to, when there is one, so the caller opens
the child it found rather than re-parsing a string; a jar path separator
is only introduced when the parent really is an archive, so a lib jar of
an exploded jarfile is named dir/BOOT-INF/lib/x.jar rather than
dir!/BOOT-INF/lib/x.jar.

Lib dir discovery is now one recursive, case-insensitive scan for names
ending in ".jar", deduplicated by exact name, rather than a different
rule per root kind.

To support this, VfsRoot gains three methods:

  getManifest() returns the main section of META-INF/MANIFEST.MF as an
  unmodifiable map keyed case-insensitively, or null if there is no
  manifest; it is read once and cached. getManifestEntry(String) reads a
  single attribute. Both work for all three root kinds, since a
  directory and a module keep their manifest in the same place a jarfile
  does.

  getEntries(String) lists the entries whose name starts with a prefix,
  skipping the directories of a tree that cannot hold a match, so
  listing BOOT-INF/lib/ does not walk the who